--- a/package.json
+++ b/package.json
@@ -2,21 +2,44 @@
   "name": "my_portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://NOY10.github.io",
   "dependencies": {
+    "@firebase/storage": "^0.9.2",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@react-three/drei": "^8.10.0",
+    "@react-three/fiber": "^7.0.26",
     "@reduxjs/toolkit": "^1.7.2",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^7.2.1",
+    "babel-plugin-glsl": "^1.0.0",
+    "firebase": "^9.6.7",
+    "framer-motion": "^6.2.7",
+    "gh-pages": "^3.2.3",
+    "glsl-noise": "^0.0.0",
+    "glslify": "^7.1.1",
+    "gltfjsx": "^4.5.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
-    "react-scripts": "5.0.0"
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "^5.0.0",
+    "react-scroll": "^1.8.5",
+    "react-spinkit": "^3.0.0",
+    "react-video-js-player": "^1.1.1",
+    "three": "^0.137.5",
+    "use-local-storage": "^2.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
