--- a/package.json
+++ b/package.json
@@ -4,34 +4,34 @@
   "private": true,
   "homepage": "http://NOY10.github.io",
   "dependencies": {
-    "@firebase/storage": "^0.9.2",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.60",
-    "@react-three/drei": "^8.10.0",
-    "@react-three/fiber": "^7.0.26",
-    "@reduxjs/toolkit": "^1.7.2",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
+    "@firebase/storage": "^0.9.5",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.61",
+    "@react-three/drei": "^8.20.2",
+    "@react-three/fiber": "^7.0.27",
+    "@reduxjs/toolkit": "^1.8.1",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^7.2.1",
     "babel-plugin-glsl": "^1.0.0",
-    "firebase": "^9.6.7",
-    "framer-motion": "^6.2.7",
+    "firebase": "^9.6.11",
+    "framer-motion": "^4.1.17",
     "gh-pages": "^3.2.3",
     "glsl-noise": "^0.0.0",
     "glslify": "^7.1.1",
-    "gltfjsx": "^4.5.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.1",
-    "react-scripts": "^5.0.0",
-    "react-scroll": "^1.8.5",
+    "react-redux": "^7.2.8",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^2.1.8",
+    "react-scroll": "^1.8.7",
     "react-spinkit": "^3.0.0",
     "react-video-js-player": "^1.1.1",
     "three": "^0.137.5",
-    "use-local-storage": "^2.2.6"
+    "use-local-storage": "^2.3.6",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
