--- a/package.json
+++ b/package.json
@@ -4,38 +4,38 @@
   "private": true,
   "homepage": "http://NOY10.github.io",
   "dependencies": {
-    "@firebase/storage": "^0.9.5",
+    "@firebase/storage": "^0.11.1",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
-    "@react-three/drei": "^8.20.2",
-    "@react-three/fiber": "^7.0.27",
-    "@reduxjs/toolkit": "^1.8.1",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^12.1.5",
-    "@testing-library/user-event": "^7.2.1",
+    "@react-three/drei": "^9.56.19",
+    "@react-three/fiber": "^8.11.0",
+    "@reduxjs/toolkit": "^1.9.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "babel-plugin-glsl": "^1.0.0",
-    "firebase": "^9.6.11",
-    "framer-motion": "^4.1.17",
-    "gh-pages": "^3.2.3",
+    "firebase": "^9.17.1",
+    "framer-motion": "^9.0.2",
+    "gh-pages": "^5.0.0",
     "glsl-noise": "^0.0.0",
     "glslify": "^7.1.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
-    "react-redux": "^7.2.8",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.8",
-    "react-scroll": "^1.8.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.1",
+    "react-scripts": "^5.0.1",
+    "react-scroll": "^1.8.9",
     "react-spinkit": "^3.0.0",
     "react-video-js-player": "^1.1.1",
-    "three": "^0.137.5",
+    "three": "^0.149.0",
     "use-local-storage": "^2.3.6",
-    "uuid": "^8.3.2"
+    "uuid": "^9.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
